Fixed uneccessary fetch and handled the scroll overflow on filter in small screens

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,3 +14,12 @@ body {
 }
 
 
+/* Hide scrollbar for WebKit browsers */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for Firefox */
+.scrollbar-hide {
+  scrollbar-width: none;
+}
